Initial 1.19.3 port
Initial port to 1.19.3. The game loads and seemingly works correctly, however datagen is not yet tested.